bolier-plate v3 up

--- a/boilerplate/v3/package.json
+++ b/boilerplate/v3/package.json
@@ -14,8 +14,10 @@
   "author": "Jaehyeon Kim",
   "license": "MIT",
   "dependencies": {
+    "history": "^2.1.2",
     "react": "^15.4.2",
-    "react-dom": "^15.4.2"
+    "react-dom": "^15.4.2",
+    "react-router": "^2.8.1"
   },
   "devDependencies": {
     "babel-core": "^6.24.0",
